# Spring-Boot-JNI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
src/c/: CMakeLists.txt  com_gyjian_algorithm_jni_NativeLib.cpp  com_gyjian_algorithm_jni_NativeLib.h
src/c/core/: Makefile  register.c  register.h
src/main/java/com/gyjian/algorithm/: AlgorithmApplication.java  AuthCode.java
src/main/java/com/gyjian/algorithm/annotation/: ApiVersion.java  ApiVesrsionCondition.java
src/main/java/com/gyjian/algorithm/bean/param/: AuthCodeRequestParams.java
src/main/java/com/gyjian/algorithm/bean/result/: Result.java
src/main/java/com/gyjian/algorithm/config/: Swagger2Config.java
src/main/java/com/gyjian/algorithm/controller/: AuthCodeController.java
src/main/java/com/gyjian/algorithm/jni/: LibLoader.java  NativeLib.java
src/main/resources/: application.yml
src/test/java/com/gyjian/algorithm/: AlgorithmApplicationTests.java
